<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Activities.SignUpActivity">

    <ScrollView
        android:id="@+id/scrollview1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingBottom="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="63dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/register"
                android:textColor="@color/txt_black_333333"
                android:textSize="32sp" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="39dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/username"
                android:textColor="@color/hint_gray_a1a1a1"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/userNametxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="6dp"
                android:background="@color/transparent"
                android:fontFamily="@font/roboto_bold"
                android:hint="@string/enter_username"
                android:inputType="text"
                android:textColor="@color/txt_black_333333"
                android:textColorHint="@color/black"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="9dp"
                android:background="@color/line_e5e5e5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/email"
                android:textColor="@color/hint_gray_a1a1a1"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/userEmailtxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="6dp"
                android:background="@color/transparent"
                android:fontFamily="@font/roboto_bold"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/txt_black_333333"
                android:textColorHint="@color/black"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="9dp"
                android:background="@color/line_e5e5e5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/create_password"
                android:textColor="@color/hint_gray_a1a1a1"
                android:textSize="14sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="6dp">

                <EditText

                    android:id="@+id/userPasswordtxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/transparent"
                    android:fontFamily="@font/roboto_bold"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:textColor="@color/txt_black_333333"
                    android:textColorHint="@color/black"
                    android:textSize="14sp" />

                <FrameLayout
                    android:id="@+id/frame_eye"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:padding="15dp">

                    <ImageView
                        android:id="@+id/password_show"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_eye2"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/password_hide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_eye1"
                        android:visibility="visible" />
                </FrameLayout>

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="9dp"
                android:background="@color/line_e5e5e5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_bold"
                android:text="Address"
                android:textColor="@color/hint_gray_a1a1a1"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/userAddresstxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="6dp"
                android:background="@color/transparent"
                android:fontFamily="@font/roboto_bold"
                android:hint="@string/enter_address"
                android:inputType="textEmailAddress"
                android:textColor="@color/txt_black_333333"
                android:textColorHint="@color/black"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="9dp"
                android:background="@color/line_e5e5e5" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createAccBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/rectangle_btn"
                android:clickable="true"
                android:fontFamily="@font/roboto_bold"
                android:paddingVertical="15dp"
                android:text="@string/create_account"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/signUpWith"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="27dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/or_sign_up_with"
                android:textColor="@color/txt_black_333333"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingHorizontal="24dp"
                android:paddingTop="16dp"
                android:paddingBottom="31dp">

                <TextView
                    android:id="@+id/btn_google_signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="110dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/rectangle_gray_btn"
                    android:drawableStart="@drawable/ic_google_logo"
                    android:drawablePadding="12.7dp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center_horizontal|center_vertical"
                    android:paddingVertical="14dp"
                    android:paddingStart="26dp"
                    android:paddingEnd="30dp"
                    android:text="@string/google"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="14sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/already_a_user"
                    android:textColor="@color/gray_999999"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/loginBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:clickable="true"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/login"
                    android:textColor="@color/btn_42c6a5"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        >

        <ImageView
            android:id="@+id/faint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/faint"
            />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading" />
    </RelativeLayout>

</RelativeLayout>