<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingBottom="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="63dp"
                    android:fontFamily="@font/roboto_black"
                    android:text="@string/login"
                    android:textColor="@color/txt_black_333333"
                    android:textSize="32sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginTop="26dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/username_or_email"
                android:textColor="@color/hint_gray_a1a1a1"
                android:textSize="10sp" />

            <EditText
                android:id="@+id/email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="56dp"
                android:layout_marginTop="6dp"
                android:background="@color/transparent"
                android:fontFamily="@font/roboto_bold"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/txt_black_333333"
                android:textColorHint="@color/black"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="56dp"
                android:layout_marginTop="9dp"
                android:background="@color/line_e5e5e5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/enter_password"
                android:textColor="@color/hint_gray_a1a1a1"
                android:textSize="10sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="56dp"
                android:layout_marginTop="6dp">

                <EditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:fontFamily="@font/roboto_bold"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:textColor="@color/txt_black_333333"
                    android:textColorHint="@color/black"
                    android:textSize="14sp" />

                <FrameLayout
                    android:id="@+id/frame_eye"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:padding="15dp">

                    <ImageView
                        android:id="@+id/password_show"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_eye2"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/password_hide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_eye1"
                        android:visibility="visible" />
                </FrameLayout>

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="56dp"
                android:layout_marginTop="9dp"
                android:background="@color/line_e5e5e5" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="56dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/rectangle_btn"
                android:clickable="true"
                android:fontFamily="@font/roboto_bold"
                android:paddingVertical="15dp"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="27dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/or_login_with"
                android:textColor="@color/txt_black_333333"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingHorizontal="2dp">

                <TextView
                    android:id="@+id/btn_google_signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/rectangle_gray_btn"
                    android:drawableStart="@drawable/ic_google_logo"
                    android:drawablePadding="12.7dp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:paddingVertical="14dp"
                    android:paddingStart="26dp"
                    android:paddingEnd="30dp"
                    android:text="@string/google"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="14sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="31dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/new_user"
                    android:textColor="@color/gray_999999"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/signUpbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:clickable="true"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/sign_up_now"
                    android:textColor="@color/btn_42c6a5"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        >

        <ImageView
            android:id="@+id/faint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/faint"
            />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading" />
    </RelativeLayout>

</RelativeLayout>